# lifx

./: .gitignore  .gitmodules  .travis.yml  Main.hs  README.md  TODO  hie.yaml  lifx.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.2.yaml
Lifx/: Types.hs
Lifx/Lan/: LowLevel.hs  Messages.hs  Protocol.hs  Types.hs  Util.hs
Lifx/Program/: CmdParser.hs  Column.hs  Timer.hs  Types.hs
lifx-base/: lifx-base.cabal  products.json
lifx-base/src/: Lifx.hs
lifx-base/src/Lifx/: ColorParser.hs  Config.hs  Connection.hs  Internal.hs  Json.hs  ProductShortName.hs  ProductTable.hs  SelectorParser.hs  ToText.hs  Types.hs  Util.hs
lifx-base/tests/: Util.hs
lifx-cloud/: lifx-cloud.cabal
lifx-cloud/src/: Main.hs
lifx-cloud/src/Lifx/: Cloud.hs
lifx-cloud/src/Lifx/Cloud/: ErrorParser.hs  Json.hs  Preprocessor.hs  Util.hs
lifx-highlevel/: lifx-highlevel.cabal
lifx-highlevel/src-program/: lites.hs
lifx-highlevel/src-program/System/Hardware/Lifx/Program/: CmdParser.hs  CmdParser2.hs  Column.hs  ProductShortName.hs  TargetMatch.hs
lifx-highlevel/src/System/Hardware/: Lifx.hs
lifx-highlevel/src/System/Hardware/Lifx/: Cloud.hs  ColorParser.hs  Config.hs  Lan.hs  ProductTable.hs  ToText.hs  Types.hs  Util.hs
lifx-highlevel/src/System/Hardware/Lifx/Cloud/: Json.hs  Preprocessor.hs  Util.hs
lifx-highlevel/tests/: HardwareTests.hs  PureTests.hs  Util.hs
lifx-lan/: lifx-lan.cabal
lifx-lan/src/Lifx/: Lan.hs  Types.hs
lifx-lan/src/Lifx/Lan/: LowLevel.hs  Messages.hs  Protocol.hs  Types.hs  Util.hs
lifx-lan/src/Lifx/Lan/LowLevel/: Messages.hs  Protocol.hs  Types.hs  Util.hs
lifx-lowlevel/: lifx-lowlevel.cabal
lifx-lowlevel/src/System/Hardware/Lifx/Lan/: LowLevel.hs
lifx-lowlevel/src/System/Hardware/Lifx/Lan/LowLevel/: BaseTypes.hs  Messages.hs  Protocol.hs  Types.hs
lifx-programs/: lifx-programs.cabal
lifx-programs/foo/: Main.hs
lifx-programs/src/: Main.hs  decode.hs  lites.hs
lifx-programs/src/Lifx/Program/: CmdParser.hs  Column.hs  ProductShortName.hs  TargetMatch.hs
lifx-programs/tests/: HardwareTests.hs  Main.hs  PureTests.hs  Util.hs
src/System/Hardware/: Lifx.hs
src/System/Hardware/Lifx/: Cloud.hs  ColorParser.hs  Connection.hs  Internal.hs  Lan.hs  LanGG.hs  ProductTable.hs  SelectorParser.hs  Types.hs
src/System/Hardware/Lifx/Cloud/: ErrorParser.hs  Json.hs  Preprocessor.hs  Util.hs
src/System/Hardware/Lifx/Lan/: LowLevel.hs
src/System/Hardware/Lifx/Lan/LowLevel/: BaseTypes.hs  Internal.hs  Messages.hs  Protocol.hs  Types.hs  Util.hs
