-- The name of the package.
name:                lifx

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            high-level interface to LIFX bulbs

-- A longer description of the package.
description:
            This package contains the 'Connection' typeclass, which represents
            a connection to a collection of LIFX bulbs.  It contains an
            implementation of 'Connection' for the LIFX Cloud API and the
            LIFX LAN Protocol.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Patrick Pelletier

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          code@funwithsoftware.org

-- A copyright notice.
copyright:           © Patrick Pelletier, 2016

category:            Home Automation

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files: products/products.json
                    products/README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: System.Hardware.Lifx
                 , System.Hardware.Lifx.Connection
                 , System.Hardware.Lifx.Internal
                 , System.Hardware.Lifx.Lan
                 , System.Hardware.Lifx.Lan.LowLevel
                 , System.Hardware.Lifx.Lan.LowLevel.Internal

-- Paths_lifx_highlevel
  other-modules: System.Hardware.Lifx.Config
               , System.Hardware.Lifx.ProductTable
               , System.Hardware.Lifx.Types
               , System.Hardware.Lifx.Util
               , System.Hardware.Lifx.Lan.LowLevel.BaseTypes
               , System.Hardware.Lifx.Lan.LowLevel.Types
               , System.Hardware.Lifx.Lan.LowLevel.Messages
               , System.Hardware.Lifx.Lan.LowLevel.Protocol
               , System.Hardware.Lifx.Lan.LowLevel.Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , array
                     , attoparsec
                     , base16-bytestring
                     , binary
                     , bytestring
                     , case-insensitive
                     , containers
                     , directory
                     , file-embed
                     , hourglass
                     , http-client
                     , http-client-tls
                     , http-types
                    -- , lifx
                     , network
                     , network-info
                     , reinterpret-cast
                     , stm
                     , text
                     , text-format
                     , unordered-containers
                     , uuid-types
--  build-depends:       base >= 4.7 && < 5
--                     , aeson >= 0.11
--                     , array >= 0.5
--                     , attoparsec >= 0.13.0.1
--                     , base16-bytestring >= 0.1.1
--                     , binary >= 0.7
--                     , bytestring >= 0.10
--                     , case-insensitive >= 1.1
--                     , containers >= 0.5
--                     , directory >= 1.2.3
--                     , file-embed >= 0.0.8
--                     , hourglass >= 0.2.10
--                     , http-client >= 0.4.18
--                     , http-client-tls >= 0.2.2
--                     , http-types >= 0.8.6
--                     , network >= 2.6
--                     , network-info >= 0.2
--                     , reinterpret-cast >= 0.1
--                     , stm >= 2.4.2
--                     , text >= 1.2.1
--                     , text-format >= 0.3.1.1
--                     , unordered-containers >= 0.2.5.1
--                     , uuid-types >= 1.0.2
  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports -fwarn-unused-imports -fwarn-unused-binds
