-- The name of the package.
name:                lifx-base

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            basic types for packages that control LIFX bulbs

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Patrick Pelletier

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          code@funwithsoftware.org

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files: products/products.json
                    products/README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: Lifx
                 , Lifx.Internal

  other-modules: Lifx.ColorParser
               , Lifx.Config
               , Lifx.Connection
               , Lifx.ProductTable
               , Lifx.SelectorParser
               , Lifx.ToText
               , Lifx.Types
               , Lifx.Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.5 && < 5
                     , aeson >= 0.11 && < 0.12
                     , attoparsec >= 0.13.0.1 && < 0.14
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , directory >= 1.2.3 && < 1.3
                     , file-embed >= 0.0.9 && < 0.1
                     , hourglass >= 0.2.10 && < 0.3
                     , text >= 1.2.1 && < 1.3
                     , text-format >= 0.3.1.1 && < 0.4
                     , base16-bytestring >= 0.1.1 && < 0.2
                     , uuid-types >= 1.0.2 && < 1.1

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports
