-- The name of the package.
name:                lifx-cloud

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Control LIFX light bulbs via the cloud API

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Patrick Pelletier

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          code@funwithsoftware.org

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: Lifx.Cloud

  other-modules: Paths_lifx_cloud
                 Lifx.Cloud.ErrorParser
                 Lifx.Cloud.Json
                 Lifx.Cloud.Preprocessor
                 Lifx.Cloud.Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , http-client >= 0.4.18 && < 0.5
                     , http-client-tls >= 0.2.2 && < 0.3
                     , http-types >= 0.8.6 && < 0.10
                     , bytestring >= 0.10 && < 0.11
                     , aeson >= 0.11 && < 0.12
                     , attoparsec >= 0.13.0.1 && < 0.14
                     , case-insensitive >= 1.1 && < 1.3
                     , hourglass >= 0.2.10 && < 0.3
                     , stm >= 2.4.2 && < 2.5
                     , text >= 1.2.1 && < 1.3
                     , text-format >= 0.3.1.1 && < 0.4
                     , unordered-containers >= 0.2.5.1 && < 0.3
                     , uuid-types >= 1.0.2 && < 1.1
                     , lifx-base >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports
