-- The name of the package.
name:                lifx-highlevel

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            high-level interface to LIFX bulbs

-- A longer description of the package.
description:
            This package contains the 'Connection' typeclass, which represents
            a connection to a collection of LIFX bulbs.  It contains an
            implementation of 'Connection' for the LIFX Cloud API and the
            LIFX LAN Protocol.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Patrick Pelletier

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          code@funwithsoftware.org

-- A copyright notice.
copyright:           © Patrick Pelletier, 2016

category:            Home Automation

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files: products/products.json
                    products/README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: System.Hardware.Lifx
                 , System.Hardware.Lifx.Cloud
                 , System.Hardware.Lifx.Connection
                 , System.Hardware.Lifx.Internal
                 , System.Hardware.Lifx.Lan

  other-modules: Paths_lifx_highlevel
               , System.Hardware.Lifx.Cloud.ErrorParser
               , System.Hardware.Lifx.Cloud.Json
               , System.Hardware.Lifx.Cloud.Preprocessor
               , System.Hardware.Lifx.Cloud.Util
               , System.Hardware.Lifx.ColorParser
               , System.Hardware.Lifx.Config
               , System.Hardware.Lifx.ProductTable
               , System.Hardware.Lifx.SelectorParser
               , System.Hardware.Lifx.ToText
               , System.Hardware.Lifx.Types
               , System.Hardware.Lifx.Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11 && < 1.2
                     , attoparsec >= 0.13.0.1 && < 0.14
                     , base16-bytestring >= 0.1.1 && < 0.2
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , case-insensitive >= 1.1 && < 1.3
                     , containers >= 0.5 && < 0.6
                     , directory >= 1.2.3 && < 1.4
                     , file-embed >= 0.0.8 && < 0.1
                     , hourglass >= 0.2.10 && < 0.3
                     , http-client >= 0.4.18 && < 0.6
                     , http-client-tls >= 0.2.2 && < 0.4
                     , http-types >= 0.8.6 && < 0.10
                     , lifx-lowlevel >= 0.1 && < 0.2
                     , stm >= 2.4.2 && < 2.5
                     , text >= 1.2.1 && < 1.3
                     , text-format >= 0.3.1.1 && < 0.4
                     , unordered-containers >= 0.2.5.1 && < 0.3
                     , uuid-types >= 1.0.2 && < 1.1

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options: -ddump-minimal-imports -fwarn-unused-imports -fwarn-unused-binds


test-suite lifx-pure-tests
  type:           exitcode-stdio-1.0

  -- .hs or .lhs file containing the Main module.
  main-is: PureTests.hs

  -- Modules included in this executable, other than Main.
  other-modules: Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , tasty
                     , tasty-hunit >= 0.9.2 && < 0.10
                     , text >= 1.2.1 && < 1.3
                     , lifx-highlevel >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: tests

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options: -ddump-minimal-imports -fwarn-unused-imports -fwarn-unused-binds


executable lites
  -- .hs or .lhs file containing the Main module.
  main-is: lites.hs

  -- Modules included in this executable, other than Main.
  other-modules: System.Hardware.Lifx.Program.CmdParser
               , System.Hardware.Lifx.Program.Column
               , System.Hardware.Lifx.Program.ProductShortName
               , System.Hardware.Lifx.Program.TargetMatch

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , stm >= 2.4.2 && < 2.5
                     , attoparsec >= 0.13.0.1 && < 0.14
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , network >= 2.6 && < 2.7
                     , hourglass >= 0.2.10 && < 0.3
                     , network-info >= 0.2 && < 0.3
                     , text >= 1.2.1 && < 1.3
                     , cmdargs >= 0.10.13 && < 0.11
                     , text-format >= 0.3.1.1 && < 0.4
                     , lifx-highlevel >= 0.1 && < 0.2
                     , lifx-lowlevel >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs:      src-program

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options: -ddump-minimal-imports -fwarn-unused-imports -fwarn-unused-binds


executable lifx-hw-tests
  -- .hs or .lhs file containing the Main module.
  main-is: HardwareTests.hs

  -- Modules included in this executable, other than Main.
  other-modules: Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , stm >= 2.4.2 && < 2.5
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , network >= 2.6 && < 2.7
                     , hourglass >= 0.2.10 && < 0.3
                     , tasty
                     , tasty-hunit >= 0.9.2 && < 0.10
                     , text >= 1.2.1 && < 1.3
                     , lifx-highlevel >= 0.1 && < 0.2
                     , lifx-lowlevel >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: tests

  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options: -ddump-minimal-imports -fwarn-unused-imports -fwarn-unused-binds
