-- The name of the package.
name:                lifx-lan

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Control LIFX light bulbs over a LAN

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Patrick Pelletier

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          code@funwithsoftware.org

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules: Lifx.Lan.LowLevel

  other-modules: Lifx.Lan.LowLevel.Util
               , Lifx.Lan.LowLevel.Types
               , Lifx.Lan.LowLevel.Messages
               , Lifx.Lan.LowLevel.Protocol

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5
                     , stm >=2.4.2 && <2.5
                     , array >=0.5 && <0.6
                     , binary >=0.7 && <0.8
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , network >=2.6 && <2.7
                     , reinterpret-cast >= 0.1 && < 0.2
                     , network-info >= 0.2 && < 0.3
                     , text >= 1.2.1 && < 1.3
                     , lifx-base >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports
