-- The name of the package.
name:                lifx-programs

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Programs for controlling LIFX light bulbs

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Patrick Pelletier

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          code@funwithsoftware.org

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable lites
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  other-modules: Lifx.Program.CmdParser
               , Lifx.Program.Column
               , Lifx.Program.ProductShortName
               , Lifx.Program.TargetMatch

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , stm >= 2.4.2 && < 2.5
                     , attoparsec >= 0.13.0.1 && < 0.14
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , network >= 2.6 && < 2.7
                     , hourglass >= 0.2.10 && < 0.3
                     , network-info >= 0.2 && < 0.3
                     , text >= 1.2.1 && < 1.3
                     , cmdargs >= 0.10.13 && < 0.11
                     , text-format >= 0.3.1.1 && < 0.4
                     , lifx-base >= 0.1 && < 0.2
                     , lifx-lan >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports


executable new-lites
  -- .hs or .lhs file containing the Main module.
  main-is: lites.hs

  -- Modules included in this executable, other than Main.
  other-modules: Lifx.Program.CmdParser
               , Lifx.Program.Column
               , Lifx.Program.ProductShortName
               , Lifx.Program.TargetMatch

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , stm >= 2.4.2 && < 2.5
                     , attoparsec >= 0.13.0.1 && < 0.14
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , network >= 2.6 && < 2.7
                     , hourglass >= 0.2.10 && < 0.3
                     , network-info >= 0.2 && < 0.3
                     , text >= 1.2.1 && < 1.3
                     , cmdargs >= 0.10.13 && < 0.11
                     , text-format >= 0.3.1.1 && < 0.4
                     , lifx-base >= 0.1 && < 0.2
                     , lifx-lan >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports


executable foo
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  other-modules: HardwareTests
               , PureTests
               , Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.7 && < 5
                     , stm >= 2.4.2 && < 2.5
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , network >= 2.6 && < 2.7
                     , hourglass >= 0.2.10 && < 0.3
                     , tasty
                     , tasty-hunit >= 0.9.2 && < 0.10
                     , text >= 1.2.1 && < 1.3
                     , lifx-base >= 0.1 && < 0.2
                     , lifx-lan >= 0.1 && < 0.2
                     , lifx-cloud >= 0.1 && < 0.2

  -- Directories containing source files.
  hs-source-dirs: tests

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- ghc-options: -ddump-minimal-imports
